--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header{
     margin-top: 100px;
     height: 100vh;
-    background-color: black;
+    background-color: #0F0F0F;
     border-radius: 32px;
     color: white;
 
