add gif and title

--- a/client/src/components/Header/Categories/Category/Category.module.css
+++ b/client/src/components/Header/Categories/Category/Category.module.css
@@ -13,6 +13,7 @@
     margin-top: 38px;
     font-family: 'Nunito', sans-serif;
     font-size: 18px;
+    cursor: pointer;
 }
 .box img{
     width: 40px;
