--- a/client/src/components/Header/Card/Card.module.css
+++ b/client/src/components/Header/Card/Card.module.css
@@ -1,18 +1,21 @@
 .card {
-    width: 278px;
-    height: 440px;
     border-radius: 12px;
     background: rgba(255, 255, 255, 0.1);
+    margin: 2% 4%;
+    color: white;
 }
-.cardImg{
-    height: 365px;
+
+.cardImg {
+    height: 300px;
     border-radius: 12px;
 }
-.name{
+
+.name {
     font-size: 22px;
     margin: 5px 0 3px 10px;
 }
-.desc{
-    margin: 0 0 0 10px;
+
+.desc {
+    margin: 0 0 10px 10px;
     font-size: 14px;
 }
