--- a/client/src/components/Strip/Strip.module.css
+++ b/client/src/components/Strip/Strip.module.css
@@ -1,26 +1,33 @@
+.strip{
+    margin-bottom: 75px;
+}
 .marqueeInfinite {
     width: 100%;
     height: 100%;
     overflow: hidden;
     margin: 25px auto 50px;
+
 }
 
 /*Здесь можно поиграть со свойством width: mac-content*/
 .anim{
     display: flex;
     width: 200%;
-    animation: marquee-infinite 15s linear infinite;
+    animation: marquee-infinite 20s linear infinite;
+
 }
 .anim2{
     display: flex;
     width: 200%;
     animation: marquee-infinite 30s linear infinite;
+
 }
 
 .anim3{
     display: flex;
     width: 200%;
-    animation: marquee-infinite-reverse 32s linear infinite;
+    animation: marquee-infinite-reverse 35s linear infinite;
+
 }
 
 
@@ -30,6 +37,7 @@
     display: flex;
     justify-content: space-around;
     margin-right: 10px;
+
 }
 
 .marqueeInfinite img {
