--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -21,13 +21,17 @@
 
 .content {
     display: flex;
+    justify-content: space-around;
+    width: 100%;
     margin: auto 0;
-    gap: 70px;
-
 }
+
+
 .greetings{
-    /*display: flex;*/
-    flex:1;
+    display: flex;
+    height: 85%;
+    align-items: center;
+    justify-content: center;
 }
 .greetings h1{
     font-weight: 600;
@@ -38,15 +42,63 @@
 }
 .cardPosition {
     display: flex;
-    flex: 1;
 
 }
 .logo{
     font-family: 'dymaxon', sans-serif;
     font-weight: normal;
 }
+
+
+/*Card*/
+
+.card {
+    position: relative;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    margin: 2% 4%;
+    color: white;
+}
+
+.cardImg {
+    height: 230px;
+    border-radius: 12px;
+}
+
+.name {
+    font-size: 22px;
+    margin: 5px 0 3px 10px;
+
+}
+
+.desc {
+    margin: 0 0 10px 10px;
+    font-size: 14px;
+
+}
+.section{
+    position: absolute;
+    height: 26px;
+    border-radius: 12px;
+    /* Note: currently only Safari supports backdrop-filter */
+    backdrop-filter: blur(30px);
+    --webkit-backdrop-filter: blur(30px);
+    background-color: rgba(255, 255, 255, 0.15);
+    display: inline-block;
+    /*padding: 2px 5px 5px;*/
+
+    bottom: 100px;
+    left: 10px;
+    padding-bottom: 8px;
+
+}
+.section img{
+    width: 25px;
+    padding: 5px;
+}
 .firstCard{
+margin-bottom: 100px;
 }
 .secondCard{
-
+margin-top: 100px;
 }
