--- a/client/src/App.css
+++ b/client/src/App.css
@@ -239,7 +239,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 
-
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 
 
