--- a/client/src/components/Strip/Strip.module.css
+++ b/client/src/components/Strip/Strip.module.css
@@ -5,8 +5,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    margin: 25px auto 50px;
-
+    margin: 25px auto 0;
 }
 
 /*Здесь можно поиграть со свойством width: mac-content*/
