--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -14,10 +14,11 @@
 }
 .logo {
     position: absolute;
-    left: 90px;
+    left: 100px;
     top: 10%;
-
-}
+    font-family: 'dymaxon', sans-serif;
+    font-weight: normal;
+    font-size: 40px;}
 
 ul {
     list-style: none; /*убираем маркеры списка*/
