--- a/client/src/App.css
+++ b/client/src/App.css
@@ -247,7 +247,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 
-/*Auth*/
+/*Registration*/
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -326,9 +326,29 @@ body {
 }
 
 
+.errmsg {
+  color: firebrick;
+}
 
+.form__persist {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.5em;
+}
 
-
+.form__checkbox {
+  width: 24px;
+  height: 24px;
+}
+.welcome{
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
 
 
 
