--- a/client/src/App.css
+++ b/client/src/App.css
@@ -240,6 +240,8 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 
 .loader{
+  /*left: 50%;*/
+  /*position: absolute;*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -344,12 +346,12 @@ body {
 .welcome{
   color: white;
   display: flex;
-  justify-content: center;
+
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  margin: 30px;
 }
-
 
 
 
