--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -1,16 +1,151 @@
-.container{
+.container {
     display: flex;
-    height: calc(100vh - 66px);
+    height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: "Nunito", sans-serif;
     font-size: 1.5em;
-    margin-top: 66px;
 }
-.title{
+
+.title {
     width: 100%;
     text-align: center;
     color: white;
     margin-top: 0;
+}
+
+.authForm {
+    width: 415px;
+    height: 700px;
+    border-radius: 18px;
+    background: #151517;
+}
+
+.authContainer {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.topRow {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.topRegisterRow {
+    margin-top: 20px !important;
+}
+
+.lang {
+    width: 50px;
+    height: 50px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 2px 8px rgba(255, 255, 255, 0.45);
+    filter: drop-shadow(0px 2px 8px rgba(255, 255, 255, 0.45));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.lang img {
+    width: 60%;
+}
+
+.name {
+    margin-left: 30px;
+}
+
+.authForm h4 {
+    text-align: center;
+    font-size: 25px;
+    color: #fff;
+    margin-top: 20px;
+}
+.authRegisterFormText{
+    margin-top: 10px !important;
+}
+
+.formInputs {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.formRegisterInputs{
+    margin-top: 35px !important;
+}
+
+input {
+    width: 100%;
+    height: 60px;
+    background: #151517;
+    border: 1px solid #7dabc3;
+    border-radius: 12px;
+    font-size: 24px;
+    color: #fff;
+    padding-left: 15px;
+}
+
+/*input::placeholder {*/
+/*    color: #fff;*/
+/*}*/
+.forgot {
+    margin-top: 7px;
+}
+
+
+.loginButton {
+    width: 90%;
+    height: 50px;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.94);
+    box-shadow: 0 2px 30px rgba(105, 209, 255, 0.4);
+    cursor: pointer;
+    color: #191919;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto 0;
+    font-family: Nunito;
+}
+
+.secondButton {
+    width: 90%;
+    height: 50px;
+    border-radius: 18px;
+    background: #151517;
+    border: 1px solid #7dabc3;
+    cursor: pointer;
+    color: white;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto 0;
+    font-family: Nunito;
+}
+
+.authForm h3 {
+    font-family: Nunito;
+    font-size: 18px;
+    color: #8a8a8d;
+    text-align: center;
+    margin-top: 35px;
+    margin-bottom: 0px;
+}
+
+.social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social a {
+    cursor: pointer;
 }
