--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -17,9 +17,10 @@
 
 .authForm {
     width: 415px;
-    height: 700px;
+
     border-radius: 18px;
     background: #151517;
+
 }
 
 .authContainer {
@@ -31,11 +32,11 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .topRegisterRow {
-    margin-top: 20px !important;
+    //margin-top: 20px !important;
 }
 
 .lang {
@@ -62,26 +63,27 @@
     text-align: center;
     font-size: 25px;
     color: #fff;
-    margin-top: 20px;
+    margin:0;
 }
 .authRegisterFormText{
-    margin-top: 10px !important;
+    /*margin-top: 10px !important;*/
 }
 
 .formInputs {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30px;
+    gap: 20px;
 }
 .formRegisterInputs{
-    margin-top: 35px !important;
+    /*margin-top: 35px !important;*/
 }
 
 input {
-    width: 100%;
+    width: 335px;
+
     height: 60px;
     background: #151517;
     border: 1px solid #7dabc3;
@@ -89,6 +91,7 @@ input {
     font-size: 24px;
     color: #fff;
     padding-left: 15px;
+
 }
 
 /*input::placeholder {*/
@@ -128,7 +131,7 @@ input {
     align-items: center;
     margin: 10px auto 0;
     font-family: Nunito;
-    padding-right: 30px;
+    padding-right: 33px;
     padding-top: 5px;
 
 }
@@ -154,7 +157,7 @@ input {
     font-size: 18px;
     color: #8a8a8d;
     text-align: center;
-    margin-top: 35px;
+    margin-top: 20px;
     margin-bottom: 0px;
 }
 
@@ -166,4 +169,23 @@ input {
 
 .social a {
     cursor: pointer;
+}
+.offscreen {
+    position: relative;
+    top: -5px;
+    color: #ff4d4f;
+    font-size: 14px;
+    align-self: flex-start;
+    margin: 10px 0 0 5px;
+    display: none;
+    transition: all ease 2s;
+}
+.instructions{
+    position: relative;
+    color: #ff4d4f;
+    font-size: 14px;
+    align-self: flex-start;
+    margin: 9px 0 0 5px;
+    display: inline-block;
+    transition: all ease 2s;
 }
