--- a/client/src/pages/Main/FooterHomePage/FooterHomePage.module.css
+++ b/client/src/pages/Main/FooterHomePage/FooterHomePage.module.css
@@ -1,7 +1,107 @@
-.footer{
-    height: 260px;
-    border-radius: 12px;
+.footer {
+    height: 307px;
+    border-radius: 24px 24px 0px 0px;
     background: #0f0f0f;
-    margin: 0 auto;
     width: 100%;
+    font-size: 18px;
+    font-family: Nunito, serif;
+    color: white;
+    display: flex;
+    position: relative;
+
+}
+
+.about {
+    display: flex;
+    flex-direction: column;
+    margin-left: 120px;
+    gap: 25px;
+    margin-top: 76px;
+    margin-right: 100px;
+}
+
+.about a {
+    color: #5b5759;
+}
+
+.about p {
+    margin: 0;
+}
+
+.more {
+    display: flex;
+    margin-top: 76px;
+    flex-direction: column;
+    gap: 25px;
+    margin-right: 30px;
+}
+
+.more a {
+    color: #5b5759;
+}
+
+.more p {
+    margin: 0;
+}
+
+.support {
+    display: flex;
+    margin-top: 76px;
+    flex-direction: column;
+    gap: 25px;
+    margin-right: 53px;
+}
+
+.support a {
+    color: #5b5759;
+}
+
+.support p {
+    margin: 0;
+}
+
+.social {
+    position: relative;
+    display: flex;
+    margin-top: 76px;
+    flex-direction: column;
+    gap: 12px;
+    width: 200px;
+    flex-wrap: wrap;
+}
+
+.social p {
+    margin: 0 0 0 16px;
+}
+
+.socialIco {
+    position: relative;
+}
+
+.socialIco a img {
+    position: relative;
+}
+
+.ico1 {
+    position: relative;
+    top: -5%;
+}
+
+.ico2 {
+    position: relative;
+    top: -5%;
+    left: -7%;
+}
+
+.ico3 {
+    position: relative;
+    top: -17%;
+}
+
+.payment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
 }
