--- a/client/src/App.css
+++ b/client/src/App.css
@@ -350,13 +350,14 @@ body {
 .welcome{
   color: white;
   display: flex;
-
   flex-direction: column;
   align-items: center;
   height: 100vh;
   margin: 30px;
 }
-
+.Toastify__toast{
+  border-radius: 12px !important;
+}
 
 
 
