--- a/client/src/components/Categories/Category/Category.module.css
+++ b/client/src/components/Categories/Category/Category.module.css
@@ -5,7 +5,7 @@
 .box {
     width: 165px;
     border-radius: 12px;
-    background: rgba(255, 255, 255, 0.1);
+    /*background: rgba(255, 255, 255, 0.1);*/
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -14,6 +14,15 @@
     font-family: 'Nunito', sans-serif;
     font-size: 18px;
     cursor: pointer;
+    /*width: 180px;*/
+    height: 60px;
+
+
+    /* Note: currently only Safari supports backdrop-filter */
+    backdrop-filter: blur(10px);
+    --webkit-backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.05);
+
 }
 
 .box img {
