--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,38 +1,45 @@
 .nav {
-    position: fixed;
-    top: 0;
+    padding-top: 20px;
+    /*top: 0;*/
     width: 100%;
-    backdrop-filter: blur(37px);
-    --webkit-backdrop-filter: blur(37px);
-    background-color: rgba(255, 255, 255, 0.02);
-    z-index: 999;
+    /*backdrop-filter: blur(37px);*/
+    /*--webkit-backdrop-filter: blur(37px);*/
+    /*background-color: rgba(255, 255, 255, 0.02);*/
+    /*z-index: 999;*/
     height: 66px;
-    margin-bottom: 200px;
+
 }
 .leftMenu{
     z-index: 1000;
 }
 .logo {
-    position: absolute;
-    left: 100px;
-    top: 10%;
+    /*position: absolute;*/
+    /*left: 100px;*/
+    /*top: 10%;*/
     font-family: 'dymaxon', sans-serif;
     font-weight: normal;
-    font-size: 40px;}
+    font-size: 40px;
+}
 
 ul {
-    list-style: none; /*убираем маркеры списка*/
-    margin: 0; /*убираем верхнее и нижнее поле, равное 1em*/
-    padding-left: 0; /*убираем левый отступ, равный 40px*/
-    margin-left: 310px;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 66px;
+    text-align: center;
+
+
 }
 
 ul li {
     display: inline-block;
     align-self: center;
-    margin-left: 100px;
+    margin-right: 120px;
+    text-align: center;
 }
 
 a {
@@ -43,15 +50,19 @@ a {
     color: #fff;
     font-family: 'Nunito', sans-serif;
 }
+.rightSide{
+    position: relative;
+}
 
 .lang {
+    z-index: 9999;
     position: absolute;
-    right: 6.5%;
-    top: 27.2%;
+    right: 8.6%;
+    top: 3.6%;
 }
 .profile {
     position: absolute;
-    right: 2.2%;
-    top: 29%;
+    right: 3.2%;
+    top: 3.6%;
     cursor: pointer !important;
 }
