--- a/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
+++ b/client/src/pages/Main/HeaderHomePage/HeaderHomePage.module.css
@@ -1,7 +1,7 @@
 .header {
-    margin-top: 100px;
+    padding-top: 10px;
     height: 90vh;
-    background-color: #0F0F0F;
+    /*background-image: url("../../../../public/home-background.png");*/
     border-radius: 32px;
     color: white;
     font-family: 'Nunito', sans-serif;
