--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,11 +141,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
   background-color: #484a4d;
   border-radius: 50%;
   padding: 5px;
-  margin: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: filter 300ms;
+  cursor: pointer;
+  margin: 20px 2px 2px;
 }
 
 .icon-button:hover {
@@ -354,6 +355,13 @@ body {
   align-items: center;
   height: 100vh;
   margin: 30px;
+}
+.welcome h1{
+  font-size: 28px;
+}
+.welcome span{
+  font-family: DymaxionScript, serif;
+
 }
 .Toastify__toast{
   border-radius: 12px !important;
