--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -9,9 +9,11 @@
     height: 66px;
 
 }
-.leftMenu{
+
+.leftMenu {
     z-index: 1000;
 }
+
 .logo {
     /*position: absolute;*/
     /*left: 100px;*/
@@ -50,18 +52,20 @@ a {
     color: #fff;
     font-family: 'Nunito', sans-serif;
 }
-.rightSide{
+
+.rightSide {
+    display: flex;
     position: absolute;
-    top: 3.6%;
+    top: 3.8%;
     right: 2%;
+
+
 }
 
-.lang{
+.lang {
     position: relative;
-
     border-radius: 12px;
 
-    /* Note: currently only Safari supports backdrop-filter */
     backdrop-filter: blur(10px);
     --webkit-backdrop-filter: blur(10px);
 
@@ -70,8 +74,38 @@ a {
 
 }
 
-.profile {
+.profileBack {
+    width: 105px;
+    height: 50px;
+    background: #0f202b;
     position: relative;
+
+}
+
+.profile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    width: 105px;
+    height: 50px;
+    background: #0f202b;
+    border-radius: 12px;
     right: 12%;
     cursor: pointer !important;
+}
+.profileText{
+    padding-left: 7px;
+}
+
+.profileLogin {
+    display: flex;
+    margin-left: 15px;
+    width: 46px;
+    height: 46px;
+    /* background: url(...); */
+    border: 1px solid rgba(170, 120, 186, 0.2);
+    filter: drop-shadow(0px 2px 8px #a574b4);
+    border-radius: 50px;
 }
