--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -109,3 +109,31 @@ a {
     filter: drop-shadow(0px 2px 8px #a574b4);
     border-radius: 50px;
 }
+.navItem{
+    position: relative;
+}
+.navItem:hover::before{
+    transform: scaleX(1);
+    transition: transform 0.5s;
+    /*width: 126px;*/
+    /*height: 1px;*/
+    /*background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);*/
+    /*filter: drop-shadow(0px 2px 20px rgba(143, 188, 242, 0.99));*/
+}
+.navItem::before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    padding: 1px;
+    background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);
+    filter: drop-shadow(0px 2px 2px rgba(143, 188, 242, 0.1));
+
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+    transform-origin: center;
+    border-radius: 5px;
+}
+
