--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -33,14 +33,14 @@ ul {
     align-items: center;
     height: 66px;
     text-align: center;
-
+    margin-left: 65px;
 
 }
 
 ul li {
     display: inline-block;
     align-self: center;
-    margin-right: 120px;
+    margin-left: 120px;
     text-align: center;
 }
 
@@ -55,19 +55,21 @@ a {
 
 .rightSide {
     display: flex;
-    position: absolute;
-    top: 3.8%;
-    right: 2%;
-
+    position: relative;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .lang {
     position: relative;
     border-radius: 12px;
-
     backdrop-filter: blur(10px);
     --webkit-backdrop-filter: blur(10px);
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
 
 
     z-index: 9999;
@@ -136,4 +138,25 @@ a {
     transform-origin: center;
     border-radius: 5px;
 }
+.active{
+    transition: transform 0.5s;
+}
+.active::before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    padding: 1px;
+    background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);
+    filter: drop-shadow(0px 2px 2px rgba(143, 188, 242, 0.1));
+
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transform: scaleX(1);
+    transition: transform 0.5s;
+
+    transform-origin: center;
+    border-radius: 5px;
+}
+
 
