--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,4 +1,5 @@
 .nav {
+    position: relative;
     padding-top: 20px;
     /*top: 0;*/
     width: 100%;
@@ -33,7 +34,7 @@ ul {
     align-items: center;
     height: 66px;
     text-align: center;
-    margin-left: 65px;
+    margin-left: 55px;
 
 }
 
@@ -58,6 +59,7 @@ a {
     position: relative;
     justify-content: center;
     align-items: center;
+    /*margin-left: 170px;*/
 
 }
 
@@ -67,7 +69,6 @@ a {
     backdrop-filter: blur(10px);
     --webkit-backdrop-filter: blur(10px);
     display: flex;
-    position: relative;
     justify-content: center;
     align-items: center;
 
@@ -83,33 +84,20 @@ a {
     position: relative;
 
 }
-
-.profile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-
-    width: 105px;
-    height: 50px;
-    background: #0f202b;
-    border-radius: 12px;
-    right: 12%;
-    cursor: pointer !important;
-}
 .profileText{
     padding-left: 7px;
 }
 
 .profileLogin {
     display: flex;
-    margin-left: 15px;
+    margin-left: 20px;
     width: 46px;
     height: 46px;
     /* background: url(...); */
     border: 1px solid rgba(170, 120, 186, 0.2);
     filter: drop-shadow(0px 2px 8px #a574b4);
     border-radius: 50px;
+    cursor: pointer ;
 }
 .navItem{
     position: relative;
