--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -91,7 +91,7 @@ label{
     margin-top: 20px !important;
 }
 
-input {
+.formInputs input {
     width: 315px;
     height: 60px;
     background: #151517;
