--- a/client/src/pages/Admin/Admin.module.css
+++ b/client/src/pages/Admin/Admin.module.css
@@ -39,9 +39,29 @@
     justify-content: center;
     align-items: center;
     margin: 10px auto 0;
-    font-family: Nunito;
+    font-family: Nunito, sans-serif;
 }
 .selectorGames{
     color: black;
+}
+.modelsTable{
+    margin: 0 auto;
+    background: #414150;
+    text-align: center;
+    padding: 15px 50px 15px 50px;
+    border-radius: 5px;
+}
+.modelsTable tr{
+    border: black 2px solid;
+}
+.modelsTable td{
+    border: black 2px solid;
 
+}
+.modelsTable img{
+    width: 40%;
+}
+.modelsTable button{
+    cursor: pointer;
+    margin: 0 10px 0 10px;
 }
