--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,17 +1,3 @@
-.nav {
-    position: relative;
-    padding-top: 20px;
-
-    /*top: 0;*/
-    width: 100%;
-    /*backdrop-filter: blur(37px);*/
-    /*--webkit-backdrop-filter: blur(37px);*/
-    /*background-color: rgba(255, 255, 255, 0.02);*/
-    /*z-index: 999;*/
-    height: 66px;
-
-}
-
 .leftMenu {
     z-index: 1000;
 }
@@ -61,7 +47,6 @@ a {
     justify-content: center;
     align-items: center;
     /*margin-left: 170px;*/
-
 }
 
 .lang {
@@ -88,7 +73,7 @@ a {
 
 .profileLogin {
     display: flex;
-    margin-left: 20px;
+    margin: 0 50px 0 60px;
     width: 46px;
     height: 46px;
     /* background: url(...); */
