restyling profile page

--- a/client/src/pages/Profile.module.css
+++ b/client/src/pages/Profile.module.css
@@ -2,21 +2,67 @@
 
 }
 .header{
-    background: url("../../public/profile/blade-runner.jpg") center no-repeat;
+    background: url("../../public/profile/profile-background.png") center no-repeat;
     background-size: cover;
-    height: 250px;
-    width: 100%;
+    height: 300px;
+    width: 1000px;
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
+}
+.greetings{
+    position: absolute;
+    font-family: 'dymaxon', sans-serif;
+    font-size: 36px;
+    left: 17px;
+    top: 7px;
 }
 .header img{
-    width: 160px;
+    width: 100px;
     border-radius: 100px;
-    margin-left: 30px;
+    margin-left: 55px;
+    border: 1px solid rgba(170, 120, 186, 0.2);
+    filter: drop-shadow(0px 2px 8px #a574b4);
+    margin-bottom: 5px;
 }
-.header span{
-    font-size: 55px;
+.description{
     margin-left: 15px;
-    font-family: DymaxionScript, serif;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+}
+.name{
+    font-size: 18px;
+    font-family: 'Nunito Sans', sans-serif;
+    margin: 0 0 10px 0;
+}
+.bio{
+    font-size: 16px;
+    margin: 0 0 0 0;
+    font-family: 'Nunito', sans-serif;
+}
+.edit{
+    position: absolute;
+    right: 58px;
+    bottom: 36px;
+
+}
+.secondButton {
+    width: 130px;
+    height: 50px;
+    border-radius: 25px;
+    background: #151517;
+    border: 1px solid #7dabc3;
+    cursor: pointer;
+    color: white;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto 0;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 500;
+
 }
