--- a/client/src/App.css
+++ b/client/src/App.css
@@ -355,7 +355,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-margin-top: 10px;
+  padding-top: 25px;
 }
 .Toastify__toast{
   border-radius: 12px !important;
@@ -444,4 +444,26 @@ margin-top: 10px;
   background: rgb(241, 237, 237);
   transition: all 0.3s ease;
 }
+.nav {
+  position: relative;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  /*top: 0;*/
+  /*backdrop-filter: blur(37px);*/
+  /*--webkit-backdrop-filter: blur(37px);*/
+  /*background-color: rgba(255, 255, 255, 0.02);*/
+  /*z-index: 999;*/
+}
+.navBlack{
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
