--- a/client/src/pages/Main/Strip/Strip.module.css
+++ b/client/src/pages/Main/Strip/Strip.module.css
@@ -1,5 +1,7 @@
 .strip{
-    margin-bottom: 75px;
+    padding-bottom: 75px;
+    padding-top: 75px;
+    background-color: #010101;
 }
 .marqueeInfinite {
     width: 100%;
