--- a/client/src/pages/Admin/Admin.module.css
+++ b/client/src/pages/Admin/Admin.module.css
@@ -49,7 +49,7 @@
     background: #414150;
     text-align: center;
     padding: 15px 50px 15px 50px;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 .modelsTable tr{
     border: black 2px solid;
@@ -59,7 +59,7 @@
 
 }
 .modelsTable img{
-    width: 40%;
+    width: 80px;
 }
 .modelsTable button{
     cursor: pointer;
