--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -81,6 +81,7 @@ a {
     filter: drop-shadow(0px 2px 8px #a574b4);
     border-radius: 50px;
     cursor: pointer ;
+    object-fit: cover;
 }
 .navItem{
     position: relative;
