--- a/client/src/pages/Chats/Chats.module.css
+++ b/client/src/pages/Chats/Chats.module.css
@@ -2,6 +2,6 @@
     display: flex;
 
     color: white;
-    min-height: calc(100vh - 100px);
+    height: calc(100vh - 100px);
     background-color: black;
 }
