--- a/client/src/components/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/ChatContainer/ChatContainer.module.css
@@ -1,11 +1,168 @@
+.dialog::-webkit-scrollbar {
+    width: 8px; /* ширина всей полосы прокрутки */
+    z-index: 15;
+    position: absolute;
+}
 
-.dialog{
-    position: relative;
+.dialog::-webkit-scrollbar-track {
+    background: #272727; /* цвет зоны отслеживания */
+    border-radius: 5px;
+    z-index: 15;
+    position: absolute;
+}
+
+.dialog::-webkit-scrollbar-thumb {
+    background-color: rgba(21, 20, 20, 0.93); /* цвет бегунка */
+    border-radius: 20px; /* округлось бегунка */
+    border: 3px solid #272727; /* отступ вокруг бегунка */
+    z-index: 15;
+    position: absolute;
+
+}
+
+.dialog {
     flex: 7;
     background-color: black;
+    margin-left: 25px;
+    overflow-y: auto;
+    padding-bottom: 80px;
 }
-.inputContainer{
+
+.wrapper {
     position: absolute;
-    bottom: 50px;
-    right: 25px;
+    width: 76%;
+    height: 100px;
+    z-index: 10;
+    background-color: black;
+}
+.chatInfo{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 10%;
+    width: 20%;
+    height: 100px;
+    z-index: 10;
+    background-color: black;
+}
+
+
+.chatInfo img {
+    border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    filter: drop-shadow(0px 2px 8px rgba(115, 135, 187, 0.5));
+
+}
+
+.chatInfo p {
+    font-family: "Nunito Sans", serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;
+    margin-left: 20px;
+}
+
+.chatContainer {
+    margin-top: 100px;
+}
+
+.inputContainer {
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-end;
+    margin-right: 50px;
+}
+.inputContainer input{
+    width: 900px;
+    height: 50px;
+    border-radius: 12px 0 0 12px;
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-right: none;
+    padding-left: 10px;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    background: black;
+    color: white;
+}
+.inputContainer input:focus{
+    outline: none;
+}
+.sendImage{
+    width: 32px;
+    filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(358deg) brightness(107%) contrast(101%);
+}
+.inputContainer button{
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    position: relative;
+    border-radius: 0 12px 12px 0;
+    background: black;
+    border-left: none;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 10px;
+}
+
+.message {
+    display: flex;
+    align-items: center;
+}
+.message .content {
+    max-width: 40%;
+    overflow-wrap: break-word;
+    padding: 0 15px 0 15px;
+    font-size: 1.1rem;
+    border-radius: 1rem;
+    color: #ffffff;
+    margin-bottom: 5px;
+}
+.sended {
+    justify-content: flex-end;
+}
+.sended .content {
+    background-color: #1F1F1F;
+    border-radius: 12px 0 12px 12px;
+    margin-right: 15px;
+}
+
+.recieved {
+    justify-content: flex-start;
+}
+.recieved .content {
+    background-color: rgb(60, 0, 100);
+    border-radius: 0 12px 12px 12px;
+}
+.bottomSide{
+    position: absolute;
+    bottom: 0;
+    padding: 10px 0 10px 0;
+    background-color: #000;
+    width: 76%;
+}
+.noMessage{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.noMessage img{
+margin-right: 30px;
+}
+.noMessage p {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #5d5b5a;
+
 }
