--- a/client/src/App.css
+++ b/client/src/App.css
@@ -508,3 +508,27 @@ body {
   justify-content: center;
   align-items: center;
 }
+.onlineIco{
+  background-color: #029cfc;
+  height: 11px;
+  width: 11px;
+  border-radius: 50%;
+  vertical-align: middle;
+  font-size: 500%;
+  position: absolute;
+  z-index: 5;
+  display: inline-block;
+  right: 2%;
+  bottom: 1%;
+}
+.onlineIco::after {
+  background-color: rgba(255, 255, 255, 0.3);
+  content: '';
+  height: 45%;
+  width: 12%;
+  position: absolute;
+  top: 4%;
+  left: 15%;
+  border-radius: 50%;
+  transform: rotate(40deg);
+}
