--- a/client/src/components/ChatContainer/ChatContainer.module.css
+++ b/client/src/components/ChatContainer/ChatContainer.module.css
@@ -35,7 +35,8 @@
     z-index: 10;
     background-color: black;
 }
-.chatInfo{
+
+.chatInfo {
     display: flex;
     align-items: center;
     position: absolute;
@@ -45,7 +46,8 @@
     z-index: 10;
     background-color: black;
 }
-.chatPhoto{
+
+.chatPhoto {
     position: relative;
 }
 
@@ -78,7 +80,8 @@
     justify-content: flex-end;
     margin-right: 170px;
 }
-.inputContainer input{
+
+.inputContainer input {
     width: 900px;
     height: 50px;
     border-radius: 12px 0 0 12px;
@@ -93,14 +96,17 @@
     background: black;
     color: white;
 }
-.inputContainer input:focus{
+
+.inputContainer input:focus {
     outline: none;
 }
-.sendImage{
+
+.sendImage {
     width: 32px;
     filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(358deg) brightness(107%) contrast(101%);
 }
-.inputContainer button{
+
+.inputContainer button {
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -121,6 +127,7 @@
     display: flex;
     align-items: center;
 }
+
 .message .content {
     position: relative;
     max-width: 40%;
@@ -131,20 +138,24 @@
     color: #ffffff;
     margin-bottom: 5px;
 }
-.message .content p{
+
+.message .content p {
     padding-right: 25px;
     font-size: 16px;
 }
-.message .content span{
+
+.message .content span {
     position: absolute;
     color: rgba(255, 255, 255, 0.55);
     font-size: 0.95rem;
     bottom: 5px;
     right: 10px;
 }
+
 .sended {
     justify-content: flex-end;
 }
+
 .sended .content {
     background-color: #1F1F1F;
     border-radius: 12px 0 12px 12px;
@@ -154,31 +165,55 @@
 .recieved {
     justify-content: flex-start;
 }
+
 .recieved .content {
     background-color: rgb(60, 0, 100);
     border-radius: 0 12px 12px 12px;
 }
-.bottomSide{
+
+.bottomSide {
     position: absolute;
     bottom: 0;
     padding: 10px 0 10px 0;
     background-color: #000;
     width: 76%;
 }
-.noMessage{
+
+.noMessage {
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-.noMessage img{
-margin-right: 30px;
+
+.noMessage img {
+    margin-right: 30px;
+    width: 300px;
+    height: 341px;
 }
+
 .noMessage p {
     font-family: "Nunito Sans", sans-serif;
     font-weight: 500;
     font-size: 18px;
     color: #5d5b5a;
 
+}
+
+.dayHeader {
+    text-align: center;
+    font-size: 20px;
+    background-color: #196fce;
+    width: 150px;
+    margin: 0 auto;
+    padding: 1px;
+    border-radius: 25px;
+}
+
+.loader {
+
+}
+.loader svg{
+    margin: 0 auto;
 }
