add notifications for chat

--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -134,5 +134,46 @@ a {
     margin-left: 4px;
     margin-right: 2px;
 }
+.notification{
+    position: relative;
+}
+.notificationVar{
+    position: absolute;
+    top: 31px;
+    right: 48px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    border-radius: 50px;
+    background: #ad2e2e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.notification h3{
+    margin: 0;
+    font-size: 12px;
+    font-weight: 500;
+}
+.notificationVarInDropdownItem{
+    position: absolute;
+    top: 5px;
+    right: 48px;
+    text-align: center;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    width: 40px;
+    height: 20px;
+    background: #ad2e2e;
+    filter: drop-shadow(0px 2px 30px rgba(222, 25, 0, 0.4));
+
+}
+.notificationVarInDropdownItem h3{
+    margin: 0;
+    font-size: 14px;
+    font-weight: 500;
+}
 
