--- a/client/src/App.css
+++ b/client/src/App.css
@@ -195,6 +195,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .menu-item {
+  position: relative;
   color: white;
   font-size: 18px;
   height: 15px;
