--- a/client/src/components/Contacts/Contacts.module.css
+++ b/client/src/components/Contacts/Contacts.module.css
@@ -37,6 +37,7 @@
     text-align: center;
     cursor: pointer;
     transition: 0.1s;
+    position: relative;
 }
 .contact:hover{
     background: #1f1f1f;
@@ -75,6 +76,7 @@
     align-items: center;
     width: 100%;
     padding: 10px 0 10px 0;
+    position: relative;
 }
 .desc{
     margin-left: 13px;
@@ -95,5 +97,20 @@
 }
 .avatar{
     position: relative;
+}
+.notification{
+    position: absolute;
+    background-color: #AD2E2E;
+    width: 40px;
+    height: 20px;
+    border-radius: 10px;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.notification h3{
+    padding: 0;
+    font-size: 14px;
 }
 
